--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/horizontal_stack_of_colored_books_flat_icon_vector_7320915_hu2_icon.ico">
+  <meta name="description" content="Sanaa Johnson's Resume">
+  <meta name="author" content="862175590">
 
-  <title>John Doe - Business Administration</title>
+  <title>Sanaa Johnson - Ethnic Studies</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Sanaa Johnson</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/SANAAJIMAGE.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Sanaa Johnson
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5"> Ethnic Studies 📚</div>
+        <p class="lead mb-4">I graduated in 2019 from Upland High School, immediately that summer I enrolled at Mount San Antonio College. There I majored in History and was apart of many support groups such as BSU, and other college prepared classes; networked with professor on campus and other ones. While attending I took classes ranging from hands on art, drawing, pottery, and multiple history courses; majority were presentation based, which gave me first hand experience in teaching to others and analyzing the work correctly. Furthermore, with these classes it taught me to value time management, team work, communication and so much more! I graduated from Mt. Sac in 2021 with an AA-History from there I transferred to UCR to major in Ethnic Studies. <br><br>
 
-        Enter bio here<br><br>
-
-        Enter bio here
+        While at UCR i’ve taken courses that specifically focus on Native Ameircans, African American and Asian Americans; these are the three specific fields I choose. Learning multiple cultural backgrounds will help with my communication skills as I can find common grounds of stuff they may know just from a different cultural perspective. In addition to this, allows me to correctly educate those in history, ethnics and critical race theory! To combine my skills from both colleges, helped me better prepare for the volunteering I participate in at Title 7 San Bernardino County and Sycamore Elementary located in Upland, California. In the program I mentor students and help them with activities that may need to be down, or crafts that we will do as a group; it’s an all Native based group. While the elementary is a more diverse group, where I would tutor, clean after activities, grade papers; student teacher. Currently I am still at UCR and will be applying to graduate school in the near future, my long term plans is to become a educator within the college system. Preferably at a junior college level as a I have first hand experience as I am a transfer student. Also, I could mentor and tutor those on how to be successful at a college level and possibly what steps would need to be completed to get into school! 
+<br><br>
+        For my choice of study for graduate school I am interested into why the colonization structure for multiple BIPOC communities were treated significantly the same. Is there a reason as to why they follow the same law structure? For example reservation, concentration camps, slavery and more are techinally the same thing, just structured differently for each group. My study would be to check or verify if its completely random or did someone give the greenlight and advice to conduct these take overs/assimulation in such a way. To get to graduate school though I have a few steps, first finding out the deadlines for the exams and comparing the scores at multiple schools. Secondly, is findning a copy of the GRE text and to study, find a support system and pass! I feel confident as the education and experience ive had prepared me not only for education/youth jobs but also to prepare for the next steps of my education. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.instagram.com/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://twitter.com/?lang=en">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.linkedin.com/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://www.amazon.com/">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Student Aid</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Sycamore Elementary School</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Tutoring<br> 
+              • Grading Assignments<br>
+              • Leading crafts<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2019 - June 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Prep and Kitchen</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Raising Cane's</a></div>
             <p>
               • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Breaking down and cleaning the resterant (both at AM and PM)<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">March 2021 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Craft Leader</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Title 7 San Bernardino</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Lead Native American based crafts<br>
+            • Tutored<br>
+            • Cleaned before and after sessions<br>
+            • Mentored<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">March 2018 - June 2019</span>
           </div>
         </div>
 
@@ -151,37 +151,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">Mount San Antonio College</h3>
+            <div class="subheading mb-3">AA in History</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2019 - June 2021</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Bachalors Degree in Ethnic Studies</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">September 2021- Present</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -191,7 +177,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/Jellyfish (1).jpg" width="500px">
+            <img src="img/MtSac (1).jpg" width="500px"><br>
+            <img src="img/Oxford (1).jpg" width="500px">
+            <img src="img/Pathstar-board (1).jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +188,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Sanaa Johnson</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
